Linked Oswald Google Font

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@1,500&family=Oswald&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,5 +15,8 @@
 </head>
 <body>
     <h1 class="title">To Do List</h1>
+    <div class="cardgrid">
+        <p class="cardgrid__desc">Testing</p>
+    </div>
 </body>
 </html>
