--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <h1 class="title">To Do List</h1>
+    <input type="text" name="text" class="text" placeholder="Enter Card Name">
     <div class="cardgrid">
         <p class="cardgrid__desc">Testing</p>
     </div>
